# architecture_doc_extractor

./: .gitattributes  .gitignore  Cargo.toml  PLAN.md  generate_fireman_stubs.py  validate_arm_output.py  validate_generated_ir.py  validate_intel_output.py  validate_ir_semantics.py  validate_output.py
src/: main.rs  pdf_inspector.rs
src/arm/: arm.rs  result.rs
src/arm/v1/: mod.rs
src/benches/: v2_bench.rs
src/intel/: category.rs  context.rs  intel.rs  result.rs
src/intel/align/: mod.rs
src/intel/align_with_pdf_inner_operator/: category.rs  context.rs  mod.rs
src/intel/align_with_pdf_position/: mod.rs  parse_section.rs
src/intel/v1/: mod.rs  parse_section.rs
src/intel/v2/: mod.rs
src/pdf/: mod.rs  page.rs  text.rs  v1.rs  v2.rs
src/tests/: mod.rs  pdf.rs
