[package]
name = "architecture_doc_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.33.0"
rayon = "1.8.0"
regex = "1.9.4"
tracing = { version = "*", features = ["log"] }
simplelog = "*"
