[package]
name = "architecture_doc_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.33.0"
rayon = "1.8.0"
regex = "1.9.4"
tracing = { version = "*", features = ["log"] }
simplelog = "*"
fastrand = "2.3.0"
eframe = { version = "0.31.1", optional = true }
ab_glyph = { version = "0.2.29", optional = true }
epaint_default_fonts = { version = "0.31.1", optional = true }
either = "1.15.0"

[features]
default = []
pdf_inspector = ["dep:eframe", "dep:epaint_default_fonts", "dep:ab_glyph"]
