[package]
name = "architecture_doc_extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "architecture_doc_extractor_cli"
path = "src/main.rs"

[lib]
name = "architecture_doc_extractor"
path = "src/lib.rs"

[[bench]]
name = "v2_bench"
path = "src/benches/v2_bench.rs"

[dependencies]
lopdf = "0.33.0"
rayon = "1.8.0"
regex = "1.9.4"
tracing = { version = "*", features = ["log"] }
simplelog = "*"
fastrand = "2.3.0"
eframe = { version = "0.31.1", optional = true }
ab_glyph = { version = "0.2.29", optional = false }
epaint_default_fonts = { version = "0.31.1", optional = true }
geo = "0.30.0"
either = "1.15.0"
flate2 = "1.1.1"
itertools = "0.14.0"

[features]
default = []
pdf_inspector = ["dep:eframe", "dep:epaint_default_fonts"]
